Prevent text overflow on social btns

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -959,7 +959,7 @@ nav {
 .social a {
     background-image: url('../../static/img/social-share.png');
     background-repeat: no-repeat;
-    text-indent: 100%;
+    text-indent: 200%;
     white-space: nowrap;
     overflow: hidden;
     display: block;
